--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(5, 13, 52, 0.982);
+            background: rgba(3, 10, 47, 0.982);
             height: 53.5px;
             object-fit: cover;
             z-index: 1;
@@ -375,7 +375,7 @@
         }
 
         .Promoter:hover .Promoter-content:hover a:hover{
-            width: auto;
+            width: 100px;
             padding: 10px;
             height: 36px;
             text-align: center;
@@ -392,7 +392,8 @@
             grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            width: 9.55%;
+            width: 9%;
+            padding: 5px;
         }
 
         .Contact {
@@ -450,7 +451,7 @@
         }
 
         .Contact:hover .Contact-content:hover a:hover{
-            width: auto;
+            width: 100px;
             padding: 10px;
             height: 36px;
             text-align: center;
@@ -459,7 +460,8 @@
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
-            align-items: center;
+            justify-items: center;
+            text-align: center;
         }
 
         .Contact:hover .Contact-content {
@@ -467,7 +469,8 @@
             grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            width: 10%;
+            width: 8.7%;
+            padding: 5px;
         }
 
         .Community {
@@ -3806,8 +3809,8 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            background: rgba(119, 155, 246, 0.207);
-            color: rgb(58, 108, 179);
+            background: rgba(3, 10, 47, 0.982);
+            color: lightblue;
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -3817,14 +3820,8 @@ background: #717171;
             height: 45px;
             font-family: 'Kanit';
             font-size: 15.5px;
-            margin-top: -1.5rem;
-        }
-
-        .reader:hover{
-            transition: 0.15s linear;
-            background: rgba(115, 152, 246, 0.207);
-            color: #494949;
-            border: none;
+            margin-top: -0.25rem;
+            border-radius: 0.45rem;
         }
 
         .disabled{
@@ -6642,5 +6639,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
