--- a/index.html
+++ b/index.html
@@ -3624,9 +3624,9 @@ cursor: pointer;
             padding: 14px;
             font-family: 'Kanit';
             color: #111111;
-            font-size: 12.4px;
+            font-size: 12.35px;
             text-align: justify;
-            line-height: 18px;
+            line-height: 16.5px;
             background: #fff;
             margin-top: -5px;
             border: 0.11rem solid #e0e0e0d7;
@@ -3803,6 +3803,7 @@ background: #717171;
             background: rgb(26, 89, 207);
             font-size: 15px;
             transition: 0.28s linear;
+            color: greenyellow
         }
 
         .reader {
@@ -3818,12 +3819,15 @@ background: #717171;
             width: auto;
             padding: 15px;
             height: 45px;
-            font-family: 'Kanit';
-            font-size: 15.5px;
+            font-family: 'arial';
+            font-size: 14.05px;
             margin-top: -0.2rem;
             border-radius: 0.45rem;
         }
-
+.reader:hover{
+    color: #fff;
+    transition: 0.2s linear;
+}
         .disabled{
             background: transparent;
             display: grid;
@@ -6003,10 +6007,10 @@ function showSlides(n) {
                             Immigration Is Heartbreaking
                         </div>
                         <div class="explanation2">
-                            As a physical disabled person who legally made it to Canada, I experienced hardness and challenges on my way and still experiencing them on a daily basis. In addition to racism, discrimination, overlooking behaving 
-                            seeking asylum is a long and difficult way to reach. It matters with hard work, rigor, ponctuality, credibility and optimism to deal with longer and administrative procedures
+                            As a physical disabled person who legally made it to Canada, I experienced hardness and challenges on my way and still experiencing them on a daily basis like to reading a list of endless integers in an array. In addition to racism, discrimination and overlooking amongst many other issues for a newcomer, 
+                            seeking asylum is a long and difficult process to reach. It matters with hard work, rigor, ponctuality, credibility, optimism and a high level of dose of patience to deal with longer and administrative procedures
                             fueled by a culture of bureaucracy that can last at least after many years (3-7 years) before getting everything fixed. It's been so tough because
-                            as a newcomer in a new country, I have to embrace a new reality of living in addition to mine because I need integrated.
+                            as a newcomer in a new country, I have to embrace a new reality of living in addition to mine in order to have a good integration.
                             I had neither parents, nor relatives in Montreal at this time. So I have to find out a way and place to stay. After spending 3 days
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
                             room to live. But how to do it as a newcomer in one of the coldest countries around the world on an upcoming winter ? Something was sure, I
@@ -6639,4 +6643,5 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
