--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         .navbar img:hover {
             transform: scale(1.05);
-            box-shadow: 0 -1px 0.5rem 0.1px rgba(171, 171, 171, 0.961);
+            box-shadow: 0 -1px 0.5rem 0.1px rgba(185, 185, 185, 0.961);
         }
 
         .Photography {
@@ -3810,22 +3810,22 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            background: rgba(3, 10, 47, 0.982);
-            color: lightblue;
+            border: 0.12rem solid rgba(133, 161, 171, 0.903);
+            color: rgb(94, 113, 119);
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
             width: auto;
             padding: 15px;
-            height: 45px;
+            height: 50px;
             font-family: 'arial';
             font-size: 14.05px;
             margin-top: -0.2rem;
             border-radius: 0.45rem;
         }
 .reader:hover{
-    color: #fff;
+    color: rgb(60, 71, 75);
     transition: 0.2s linear;
 }
         .disabled{
@@ -3841,7 +3841,7 @@ background: #717171;
             height: 45px;
             padding-bottom: 10px;
             cursor: pointer;
-            border-bottom: 0.12rem solid green;
+            border-bottom: 0.5rem solid rgba(150, 180, 192, 0.903);
         }
 
         .disabled:hover{
@@ -6643,5 +6643,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
