--- a/index.html
+++ b/index.html
@@ -1283,10 +1283,10 @@
             justify-content: center;
             align-items: center;
             text-align: left;
-            background: #ffffffec;
+            background: #fff;
             padding-top: 20px;
             padding-bottom: 20px;
-            margin-top: 4.9%;
+            margin-top: 5.5%;
             box-shadow: 0 0 0.15rem 0 rgb(40, 155, 236);
         }
 
@@ -3820,7 +3820,7 @@ background: #717171;
             padding: 15px;
             height: 50px;
             font-family: 'arial';
-            font-size: 14.05px;
+            font-size: 16.75px;
             margin-top: -0.2rem;
             border-radius: 0.45rem;
         }
@@ -3835,17 +3835,17 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             color: red;
-            font-size: 22px;
+            font-size: 26.25px;
             font-family: 'Kanit';
             width: 100%;
             height: 45px;
-            padding-bottom: 10px;
+            padding-bottom: 15px;
             cursor: pointer;
             border-bottom: 0.5rem solid rgba(150, 180, 192, 0.903);
         }
 
         .disabled:hover{
-            color:#000;
+            color:rgba(4, 12, 53, 0.982);
             transition: 0.15s linear;
             background: #fff;
         }
@@ -6643,6 +6643,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
 
 
