--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -229,7 +229,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -304,7 +304,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -379,7 +379,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -455,7 +455,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -532,7 +532,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -609,7 +609,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -684,7 +684,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(42, 53, 140, 0.68);
+            background-color: rgba(39, 52, 152, 0.7);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -955,8 +955,8 @@
             border-top: 4px solid orangered;
             border-radius: 13px;
             width: 65%;
-            height: 30px;
-            margin-top: 4px;
+            height: 31px;
+            margin-top: 5px;
             margin-left: -4.5px;
             justify-content: start;
             align-items: center;
@@ -988,10 +988,9 @@
             font-size: 25px;
             border-bottom: 4px solid orangered;
             border-radius: 13px;
-            margin-top: 4px;
             margin-left: -4.5px;
             width: 65%;
-            height: 30px;
+            height: 31px;
             justify-content: start;
             align-items: center;
             animation: mymove13 50s ease-in infinite;
@@ -1018,10 +1017,10 @@
             position: relative;
             background: transparent;
             width: 100%;
-            height: 80px;
+            height: 60px;
             align-items: center;
             justify-content: center;
-            margin-top: -77px;
+            margin-top: -80px;
         }
 
         .cover {
@@ -5147,7 +5146,7 @@ function showSlides(n) {
         <br>
             <br> 
         <b>But how can an inclusive environment be identified (detected) </b>? These are summarily some exploring points 
-        consisting not only to observing and questioning about how people in a chosen community are dealing with inclusion. After these steps answers and solutions should come as results of oberving and questioning.
+        consisting not only to observe and question about how people, in a chosen community, are dealing with inclusion. After these steps the answers and solutions should come as results of obervations and questions.
         </b>
         <br>
         <hr style="color: #858585">
@@ -5157,12 +5156,12 @@ function showSlides(n) {
         <br>
         I. To observe and then
         <br>
-        II. To question 
+        II. To question the diverse behaviors
         <br>
-        For examples how things are happening there in terms of socializing, connections and interactions between people ? What is the nature of their connections and conversations ? Are there many, few people with difference or disabled ?  
-        What could be the reasons ? Why and how connections, interactions and communications can stand as leverages for people to learn more about inclusiveness in a locality ? How vulnerable people like elders, 
-        disabled people or people with difference are treated in the locality if they are living in ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
-        What is the level of respect and consideration that non-disabled people are showing up to disabled people ?
+        For examples how things are happening about socialization, connections and interactions between people ? Are there many or few people with difference or disabled living ?  
+        How the connections, interactions and communications can stand as leverages for people to learn more about inclusion in the locality ? How vulnerable people like elders, 
+        disabled people and people with difference are treated ? Do non-disabled people interact with disabled people? How people are interacting between themselves ? In person ? By postal or virtual, online or in other ways ? 
+        What is the level of respect and consideration that non-disabled people are having to disabled people ?
         <br>
         <br>
         <hr style="color: #858585">
@@ -6643,5 +6642,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
