--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             position: sticky;
             justify-content: center;
             align-items: center;
+            border-bottom: 0.5rem solid rgb(183, 183, 183);
         }
 
         
@@ -6642,6 +6643,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
 
 
