--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background: transparent;
+            background: #f0f0f0;
             justify-content: center;
             align-items: center;
         }
@@ -6643,5 +6643,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
