--- a/index.html
+++ b/index.html
@@ -3810,7 +3810,7 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            border: 0.12rem solid rgba(133, 161, 171, 0.903);
+            border: 0.12rem solid rgba(99, 120, 127, 0.903);
             color: rgb(94, 113, 119);
             flex-direction: column;
             justify-content: center;
@@ -3829,23 +3829,23 @@ background: #717171;
     transition: 0.2s linear;
 }
         .disabled{
-            background: transparent;
+            background: #fff;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: red;
+            color: rgba(4, 12, 53, 0.982);
             font-size: 26.25px;
             font-family: 'Kanit';
             width: 100%;
             height: 45px;
             padding-bottom: 15px;
             cursor: pointer;
-            border-bottom: 0.5rem solid rgba(150, 180, 192, 0.903);
+            border-bottom: 0.5rem solid rgba(155, 182, 192, 0.903);
         }
 
         .disabled:hover{
-            color:rgba(4, 12, 53, 0.982);
+            color:red;
             transition: 0.15s linear;
             background: #fff;
         }
@@ -6632,7 +6632,7 @@ function showSlides(n) {
     <div class="footer">
         Copyright © 2023 Tiki N'Yiki
         <br>
-        <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are differently abled</b>
+        <b style="color: cyan; font-size: 14px;">Disability is not destiny. We are differently abled</b>
         <br>
         <b style="color: greenyellow; font-size: 11.5px; font-family: helvetica; color: lightsalmon"> Webmaster: Gabriel C. Disability Rights Activist <em style="color: #fff; font-family: 'arial'; font-size: 11.25x;">[ Looking for a job on editing web pages, contents and static websites ]</em></b>
         <br>
@@ -6643,6 +6643,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
 
 
