--- a/index.html
+++ b/index.html
@@ -3810,7 +3810,6 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            border: 0.12rem solid rgba(99, 120, 127, 0.903);
             color: rgb(94, 113, 119);
             flex-direction: column;
             justify-content: center;
@@ -3820,7 +3819,7 @@ background: #717171;
             padding: 15px;
             height: 50px;
             font-family: 'arial';
-            font-size: 16.75px;
+            font-size: 17.65px;
             margin-top: -0.2rem;
             border-radius: 0.45rem;
         }
@@ -4469,7 +4468,7 @@ function showSlides(n) {
             </a>
 
                 <div class="reader">
-                <b>Welcome ! This Website is in Project. Some of the Pics And Links Are Temporary Or Not Set Yet. Enjoy your Visit ! Thank You !</b>
+                <b>Welcome ! This Website is in Project. Some of the pics and links are temporary or not set yet. Enjoy your Visit ! Thank You !</b>
             </div>
 
         </div>
@@ -4667,7 +4666,7 @@ function showSlides(n) {
                     <div class="Clim2">
                                 
                           <div class="Cli">
-                            <b style="font-family: arial; font-size: 11.5px;">Earthquakes</b> 
+                         <p style="font-family: arial; font-size: 11.5px;">Earthquakes</p>
                         </div> 
 
                         <div class="Cli">
@@ -4685,6 +4684,7 @@ function showSlides(n) {
                         <div class="Cli"><b style="font-family: arial; font-size: 11px;">Volcanos
                         </b>
                          </div> 
+
                         <div class="Cli"><b style="font-family: arial; font-size: 11px;">Hurricanes
                         </b> 
                         </div>
@@ -6643,5 +6643,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
