--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(3, 10, 47, 0.982);
+            background: rgb(5, 13, 53);
             height: 53.5px;
             object-fit: cover;
             z-index: 1;
@@ -90,11 +90,11 @@
             border: 2px solid #fff!important;
             border-radius: 0.2rem;
             margin-top: 1.25rem;
+            box-shadow: 0 -1px 0.5rem 0.1px rgba(185, 185, 185, 0.961);
         }
 
         .navbar img:hover {
             transform: scale(1.05);
-            box-shadow: 0 -1px 0.5rem 0.1px rgba(185, 185, 185, 0.961);
         }
 
         .Photography {
@@ -113,7 +113,7 @@
 
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -127,8 +127,8 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
 }
 
         .Photography-content a {
@@ -187,7 +187,7 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -202,8 +202,8 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
    }
 
         .Sport-content a {
@@ -262,7 +262,7 @@
 
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(253, 253, 253);
                 }
@@ -277,8 +277,8 @@
   height: 120px;
   justify-content: center;
   align-items: center;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
    }
 
         .Education-content a {
@@ -337,7 +337,7 @@
 
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -352,8 +352,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
     }
 
         .Promoter-content a {
@@ -413,7 +413,7 @@
 
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -428,8 +428,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
  }
 
         .Contact-content a {
@@ -490,7 +490,7 @@
 
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -505,8 +505,8 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
    } 
 
         .Community-content a {
@@ -566,7 +566,7 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -582,8 +582,8 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  border-top: 0.11rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
    }
 
         .TikiYiki-content a {
@@ -642,7 +642,7 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
+            color: red;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -657,8 +657,8 @@
   height: 120px;
   justify-content: center;
   align-items: center;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
+  border-top: 0.11rem solid rgb(38, 97, 193);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
   }
 
         .Disability-content a {
@@ -2691,7 +2691,7 @@ height: auto;
 }
 
 .Burkimap img:hover{
-    background: -webkit-linear-gradient(rgba(0, 128, 0, 0.667),#fff);
+    background: -webkit-linear-gradient(rgba(3, 139, 3, 0.751),#fff);
     box-shadow: -0.2px 2px 0.35rem 2px rgb(21, 48, 148);
     transition: 0.14s linear;
 }
@@ -2985,10 +2985,10 @@ height: auto;
             width: 775px;
             height: 174px;
             padding: 8px;
-            background: #fffffff5;
+            background: -webkit-linear-gradient(rgba(205, 249, 198, 0.74),#fff);
             border-radius: 0.35rem;
             box-shadow: 0 -0.5px 0.3rem 1px rgba(30, 63, 184, 0.914);
-            color:rgba(126, 126, 126, 0.941);
+            color:rgba(109, 109, 109, 0.941);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 13.55px;
             margin-left: 9.5rem;
@@ -2996,10 +2996,10 @@ height: auto;
 
 
         .FASOTITLE:hover{
-            color:rgb(33, 58, 146);
+            color:rgba(89, 121, 235, 0.938);
             transition: 0.14s linear;
             box-shadow: -0.2px 2px 0.35rem 2px rgb(22, 46, 133);
-            background: -webkit-linear-gradient(rgba(127, 250, 115, 0.669),#ffff);
+           background: #fff;
         }
 
         .BUFASO{
@@ -3840,7 +3840,7 @@ background: #717171;
             height: 45px;
             padding-bottom: 15px;
             cursor: pointer;
-            border-bottom: 0.5rem solid rgba(155, 182, 192, 0.903);
+            border-bottom: 0.5rem solid rgba(156, 179, 189, 0.738);
         }
 
         .disabled:hover{
@@ -6637,6 +6637,4 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
 
