--- a/index.html
+++ b/index.html
@@ -4572,9 +4572,7 @@ function showSlides(n) {
                     <div class="k-image2">
                         <p
                             style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; padding: 5px; color: rgb(0, 149, 255);">
-                            <b> "Inclusive Education" May Be Ordinary Or New To You. But Inclusiveness Is Worded In The Dictionary
-                                And Existed Since Its Creation. It Belongs To Human-Beings To Make Inclusiveness Practical by Accepting And Encouraging Inclusive Education.
-                               It's Not A Privilege But A Right For Every Child Including Those Who Are Disabled Or Different.</b> </p>
+                            <b> "Inclusive Education" May Be New To You. But Inclusion Is Worded And Explained In The Dictionaries As Well. It Belongs To Human-Beings To Have Practical Actions About Inclusion In Integrating people who Are Excluded In The Communities. That's Why Inclusive Education for Disabled Children Is Not A Privilege But A Right.</b> </p>
 
                                 <p style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;;"><b>Inclusive Education</b> has no
                             room everywhere. It should not be a privilege but an intrinsic right.</p>
@@ -5482,7 +5480,7 @@ function showSlides(n) {
     <div class="Bu-pics1">
     <h2>Disability And Transportation</h2>
         
-    <p>Founding a coalition of disabled people or organisations to effort and offer good conditions in the transportation.  Learn about stories of disabled people who experienced countless issues with transportation early and actually. It looks like nothing changed for them. It's the same anthemn and same overlooking. Visioning a creation of a non-profit organisation for the transportation maybe named "NACADA TRANSPORT" of disabled people including elders or any other disabled person. The organisation wants to create transportation services for disabled people who will be members of NACADA Transport. The transportation will be mainly assured by retired drivers who still want to drive for themselves or their families after their retirement. They also want to give back to the communities by giving time to drive disabled people in need. Beyond the activity of services to disabled people retired drivers can also open new windows to socialize with their volunteering peers and may make friendships in a new team to a great dedication. It's said that it's a humanitary act. 
+    <p>Founding a coalition of disabled people or organisations to effort and offer good conditions in the transportation.  Learn about stories of disabled people who experienced countless issues with transportation early and actually. It looks like nothing changed for them. It's the same anthemn and same overlooking. Visioning a creation of a non-profit organisation for the transportation maybe named "NACADA TRANSPORT" of disabled people including elders or any other disabled person. The organisation wants to create transportation services for disabled people who will be members of NACADA Transport. The transportation will be mainly assured with a huge collaboration of retired drivers who are able and still want to drive and give their time for disabled people in need. Beyond their activities of giving back to the communities, retired drivers can also open new windows to socialize between themselves and may make friendships and connections. 
          
     </p>
     </div>
@@ -6637,5 +6635,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
