--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -187,7 +187,7 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -262,7 +262,7 @@
 
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(253, 253, 253);
                 }
@@ -337,7 +337,7 @@
 
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -413,7 +413,7 @@
 
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -490,7 +490,7 @@
 
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -566,7 +566,7 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -642,7 +642,7 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: blue;
             cursor: pointer;
             background: rgb(255, 255, 255);
         }
@@ -6635,6 +6635,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
 
 
