--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   border-top: 0.11rem solid rgb(38, 97, 193);
@@ -134,7 +134,7 @@
         .Photography-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -155,8 +155,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -199,7 +199,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   border-top: 0.11rem solid rgb(38, 97, 193);
@@ -209,7 +209,7 @@
         .Sport-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -230,8 +230,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -270,7 +270,7 @@
         .Education-content {
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   width: 240px;
@@ -284,7 +284,7 @@
         .Education-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -305,8 +305,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -345,7 +345,7 @@
         .Promoter-content {
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   width: 176px;
   height: 55px;
@@ -359,7 +359,7 @@
         .Promoter-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -380,8 +380,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -421,7 +421,7 @@
         .Contact-content {
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   width: 125px;
   height: 55px;
@@ -435,7 +435,7 @@
         .Contact-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -456,8 +456,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -502,7 +502,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   border-top: 0.11rem solid rgb(38, 97, 193);
@@ -512,7 +512,7 @@
         .Community-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -533,8 +533,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -574,7 +574,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   width: 270px;
@@ -589,7 +589,7 @@
         .TikiYiki-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -610,8 +610,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -650,7 +650,7 @@
         .Disability-content {
   display: none;
   position: absolute;
-  background: #fff;
+  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   width: 120px;
@@ -664,7 +664,7 @@
         .Disability-content a {
             font-size: 13.5px;
             float: none;
-            color: #000;
+            color: #fff;
             padding: 6px 10px;
             text-decoration: none;
             display: grid;
@@ -685,8 +685,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgba(39, 52, 152, 0.7);
-            color: #fff;
+            background-color: rgb(82, 93, 158);
+            color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -6635,5 +6635,4 @@ function showSlides(n) {
 </body>
 
 </html>
-
 
