--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
 }
 
         .Photography-content a {
@@ -155,7 +154,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -199,11 +198,10 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
    }
 
         .Sport-content a {
@@ -230,7 +228,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -270,15 +268,14 @@
         .Education-content {
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   width: 240px;
   height: 120px;
   justify-content: center;
   align-items: center;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
    }
 
         .Education-content a {
@@ -305,7 +302,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -345,15 +342,14 @@
         .Promoter-content {
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   width: 176px;
   height: 55px;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
     }
 
         .Promoter-content a {
@@ -380,7 +376,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -421,15 +417,14 @@
         .Contact-content {
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   width: 125px;
   height: 55px;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
  }
 
         .Contact-content a {
@@ -456,7 +451,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -502,11 +497,10 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
    } 
 
         .Community-content a {
@@ -533,7 +527,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -574,7 +568,6 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   width: 270px;
@@ -582,8 +575,8 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
    }
 
         .TikiYiki-content a {
@@ -610,7 +603,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -650,15 +643,14 @@
         .Disability-content {
   display: none;
   position: absolute;
-  background: rgb(52, 60, 104);
   padding: 1px;
   z-index: 1;
   width: 120px;
   height: 120px;
   justify-content: center;
   align-items: center;
-  border-top: 0.11rem solid rgb(38, 97, 193);
-  box-shadow: 0 2px 0.35rem 0.5px rgba(10, 26, 98, 0.982);
+  background: rgba(66, 78, 146, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(32, 37, 63, 0.994);
   }
 
         .Disability-content a {
@@ -685,7 +677,7 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(82, 93, 158);
+            background-color: rgb(98, 115, 209);
             color: #ff0;
             border-radius: 1.5rem;
             transition: 0.18s linear;
@@ -6635,4 +6627,5 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
