--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(98, 115, 209);
-            color: #ff0;
+            background-color: rgb(116, 139, 230);
+            color: darkblue;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -228,8 +228,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(98, 115, 209);
-            color: #ff0;
+            background-color: rgb(116, 139, 230);
+            color: darkblue;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -302,8 +302,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(98, 115, 209);
-            color: #ff0;
+            background-color: rgb(116, 139, 230);
+            color: darkblue;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -376,8 +376,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(98, 115, 209);
-            color: #ff0;
+            background-color: rgb(116, 139, 230);
+            color: darkblue;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -527,8 +527,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(98, 115, 209);
-            color: #ff0;
+            background-color: rgb(116, 139, 230);
+            color: darkblue;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -603,8 +603,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(98, 115, 209);
-            color: #ff0;
+            background-color: rgb(116, 139, 230);
+            color: darkblue;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -677,8 +677,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(98, 115, 209);
-            color: #ff0;
+            background-color: rgb(116, 139, 230);
+            color: darkblue;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
